# DataBricks-Sample1

./: $null  .databricksignore  .env  .gitignore  README.md  SchoolSuite.sln  _apply2.ps1  _apply_bim_tests.ps1  _apply_rs.ps1  _bim_check2.txt  _bim_fix.txt  _bim_fix2.txt  _check_mashup.txt  _check_runs.ps1  _diag_update.ps1  _drop_gold_tables.ps1  _drop_mvs.ps1  _fix_magic_cells.ps1  _fix_mashup_commas.txt  _fix_pattern.ps1  _fix_tfstate.ps1  _fix_tokens.ps1  _list_pipelines.ps1  _monitor_e2e.ps1  _prep_demo_tables.ps1  _run_demo_set_a.ps1  _run_demo_set_b.ps1  _tmp_b.txt  _tmp_val.txt  _trigger_pipeline.ps1  _vg.py  all_tests.txt  bp2.txt  bp_out.txt  bronze_ev.json  build_output.txt  bundle_deploy.txt  bundle_validate3.txt  catalogs.txt  check5.py  (+115 more)
.codacy/: codacy.yaml
api/: Api.csproj  Program.cs  appsettings.Production.json  school_suite.db
docs/: BUSINESS_CASE.md  BUSINESS_PROCESS_WORKFLOW.md
generators/: 00_master_generator.py  01_gen_vendors.py  02_gen_projects.py  03_gen_materials.py  04_gen_employees.py  05_gen_purchase_orders.py  06_gen_po_line_items.py  07_gen_contracts.py  08_gen_contract_items.py  09_gen_invoices.py  10_gen_goods_receipts.py  11_gen_project_budgets.py  12_gen_project_actuals.py  13_gen_sales_orders.py  14_gen_inventory.py  15_gen_vendor_performance.py  README.md  copilot-instructions.md
notebooks/: 01_etl_pipeline_demo.ipynb
powerbi/: README.md
resources/: procurement_orchestration_job.yml  procurement_pipelines.yml
scripts/: setup.bat  setup.sh
sql/: customer_analysis.sql  geographic_analysis.sql  product_analysis.sql  time_analysis.sql
tests/: _patch_cmp.py  _patch_conftest3.py  _patch_out.txt  _test_results.txt  conftest.py  dlt_mock.py  generate_all_tests.txt  generate_test_files.txt  mock_spark.py  mock_spark.txt  patch2.txt  patch_conftest.txt  pipeline_runner.py  test_bronze_pipeline.py  test_bronze_silver_handover.py  test_e2e_pipeline.py  test_gold_pipeline.py  test_pipeline_integrity.py  test_powerbi.py  test_powerbi_impl.pyw  test_semantic_cubes.py  test_silver_pipeline.py  (+1 more)
(+168 files in other folders)
